# semester3

./: .gitignore  README.md  SNA_EXPT_1_2.txt  main.py  networkx_package.ipynb  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
DL/: README.md  cnn_based_rs.py  compare_activ.py  feedforward_nn.py  perceptron.py  rnn.py  self_driving_car_perception_system.ipynb  svm.ipynb  yolo.ipynb
OTML/: NeuralNetworkOptimizationComparison.ipynb  README.md  coordinate_descent.ipynb  gd_with_backtracking.py  gradient_descent.ipynb  last_experiments.ipynb  minibatch.ipynb  newtons_opt.py  non_convex_opt.py  quasi_newton_opt.py  stochastic.ipynb
RS/: README.md  association_rule_mine_collab.ipynb  item_collab_filter.py  mining_association_rule.py  ratings.csv  svd_recommend.ipynb  user_collab_filter.py  user_item_int_matrix.ipynb  user_item_interact_mat.py
SNA/: README.md  SNA_GCNN_Demo.ipynb  cascade_demo.ipynb  community_detection.ipynb  data_collection.ipynb  igraph_metrics.R  network_growth_models.ipynb  nx_metrics.py  onto_repr.py  package_management.Rmd  page_rank.py  random_walk.py  social_network_analysis.R  timed_tweets.csv  tweets_data.csv  twitter_analysis.ipynb
old/: customer_restaurant.csv  idthree.py  test_data.csv
