[project]
name = "mecseaiml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.59.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "networkx==3.5",
    "numpy==2.3.1",
    "packaging==25.0",
    "pillow==11.3.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "scipy>=1.16.0",
    "six==1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "pip>=25.1.1",
    "ruff>=0.12.4",
]
